* Moneris gateway: Add support for vault [kenzie]
* NAB Transact gateway: Add support for card descriptors [nagash]
* SagePayForm: truncate long description fields [jnormore]
* Paybox Direct: treat all response codes besides '00000' as failures
[Soleone]
* Deprecate CreditCard#type method in favor of CreditCard#brand [jduff]
* Cybersource gateway: Add subscriptions support [fabiokr, jaredmoody]

== Version 1.23.0 (May 23, 2012)

* Add Litle gateway [GregDrake]
* PaymentExpress gateway: add support for BillingId and DpsBillingId for token [mikel]
* 2checkout integration: Add ability to auto settle [craigchristenson]
* 2checkout integration: Switch default mode to single page [craigchristenson]
* Cybersource: Revert - Add retrieve method to pull details on a
stored card [jduff]
* Cybersource: Revert - Add recurring payment support [jduff]
* PaymentExpress: add Cvc2Presence flag when submitting verification
value [jduff]
* SecurePayAU: fix CreditCard check [jduff]
* Barclays: fix order capture [csaunders/ntalbott/jduff]

== Version 1.22.0 (May 17, 2012)

* Remove version restriction for money gem [ylansegal]
* Add iTransact XML gateway [motske]
* PayPal Express Gateway: add options[:landing_page] [markus]
* USA ePay: Fix handling of AVS [duff]
* Ogone: Add store method to create an alias without making a purchase [joelcogen]
* Spelling fix: purcahse -> purchase [mnoack]
* ePay: Added more useful results for authorization errors [Dennis O'Connor]
* Add Robokassa integration [nashby]
* PayPal Gateway: Add recurring API [dscataglini]
* Braintree: Add support for :verify_card option on store [brentmc79]
* Moneris: cannot void a preauthorization [eddanger]
* Add Moneris US gateway [eddanger]
* Add Dotpay integration [kacperix]
* Payflow: Add description, comment and comment2 tags [ksnyder]
* Dotpay: Fix field mapping [kacperix]
* Authorize.Net CIM: Optionally add 'order' details to transactions [pote]