@@ -11,14 +11,18 @@ module ActiveMerchant #:nodoc:
     #
     #   tendollar = 1000
     #
-    # Next, create a credit card object using a TC approved test card.
+    # The transaction result is based on the cent value of the transaction. $10.15 will return a failed transaction
+    # with a response code of "15 – No Issuer", while $10.00 will return "00 – Transaction Approved."
+    #
+    # Next, create a credit card object using a eWay approved test card number (4444333322221111).
     #
     #   creditcard = ActiveMerchant::Billing::CreditCard.new(
-    #	    :number => '4111111111111111',
+    #	    :number => '4444333322221111',
     #	    :month => 8,
     #	    :year => 2006,
     #	    :first_name => 'Longbob',
-    #     :last_name => 'Longsen'
+    #     :last_name => 'Longsen',
+    #     :verification_value => '123'
     #   )
     #   options = {
     #     :order_id => '1230123',
@@ -28,12 +32,12 @@ module ActiveMerchant #:nodoc:
     #                   :state => 'WA',
     #                   :country => 'Australia',
     #                   :zip => '2000'
-    #                 }
+    #                 },
     #     :description => 'purchased items'
     #   }
     #
     # To finish setting up, create the active_merchant object you will be using, with the eWay gateway. If you have a
-    # functional eWay account, replace :login with your account info. 
+    # functional eWay account, replace :login with your Customer ID.
     #
     #   gateway = ActiveMerchant::Billing::Base.gateway(:eway).new(:login => '87654321')
     #
@@ -41,7 +45,7 @@ module ActiveMerchant #:nodoc:
     #
     #   response = gateway.purchase(tendollar, creditcard, options)
     #
-    # Sending a transaction to TrustCommerce with active_merchant returns a Response object, which consistently allows you to:
+    # Sending a transaction to eWay with active_merchant returns a Response object, which consistently allows you to:
     #
     # 1) Check whether the transaction was successful
     #
@@ -143,7 +147,7 @@ module ActiveMerchant #:nodoc:
 
       # ewayCustomerEmail, ewayCustomerAddress, ewayCustomerPostcode
       def purchase(money, creditcard, options = {})
-        requires!(options, :order_id)
+        requires_address!(options)
 
         post = {}
         add_creditcard(post, creditcard)
@@ -161,6 +165,11 @@ module ActiveMerchant #:nodoc:
       end
       
       private                       
+
+      def requires_address!(options)
+        raise ArgumentError.new("Missing eWay required parameters: address or billing_address") unless (options.has_key?(:address) or options.has_key?(:billing_address))
+      end
+
       def add_creditcard(post, creditcard)
         post[:CardNumber]  = creditcard.number
         post[:CardExpiryMonth]  = sprintf("%.2i", creditcard.month)
