@@ -10,6 +10,7 @@
 [Soleone]
 * Deprecate CreditCard#type method in favor of CreditCard#brand [jduff]
 * Cybersource gateway: Add subscriptions support [fabiokr, jaredmoody]
+* eWay gateway: Improved docs, and more accurate required parameters [juggler]
 
 == Version 1.23.0 (May 23, 2012)
 
